# nanobot-plugin

./: CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml
.github/workflows/: release.yml
src/nanobot_channel_peerclaw/: __init__.py  channel.py
